--- a/recipe.yml
+++ b/recipe.yml
@@ -64,7 +64,7 @@ rpm:
     - distrobox
     - micro
     - tlp
-    - tlp-drw
+    - tlp-rdw
   # These RPMs will be removed from the system image. This step happens during
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
   remove:
