--- a/recipe.yml
+++ b/recipe.yml
@@ -66,13 +66,12 @@ rpm:
     - micro
     - tlp
     - tlp-rdw
-    - golang
+    - mozilla-openh264
+    
   # These RPMs will be removed from the system image. This step happens during
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
   remove:
-    # Remove the native firefox (from Fedora) in favor of the Flatpak.
-    - firefox
-    - firefox-langpacks
+  
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
   # Whether to embed "yafti" into the OS image and configure it to autostart,
