--- a/recipe.yml
+++ b/recipe.yml
@@ -57,6 +57,9 @@ rpm:
     # if you ever download or compile any custom software on your machine.
     - libadwaita
     # Add your own below:
+    # rpmFusion 
+    https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm 
+    https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
     # Example:
     # - tilix
     - neovim
@@ -66,12 +69,16 @@ rpm:
     - micro
     - tlp
     - tlp-rdw
-    - mozilla-openh264
+    - openh264
+    - mozilla-openh264 
+    - gstreamer1-plugin-openh264
     
   # These RPMs will be removed from the system image. This step happens during
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
   remove:
-  
+  - gnome-tour
+  - yelp
+  - cheese
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
   # Whether to embed "yafti" into the OS image and configure it to autostart,
@@ -101,6 +108,5 @@ firstboot:
     - com.ultimaker.cura
     - com.discordapp.Discord
     - com.mattjakeman.ExtensionManager
-    - cc.arduino.IDE2
-    - com.visualstudio.code-oss
+    - com.visualstudio.code
     - org.videolan.VLC
