--- a/recipe.yml
+++ b/recipe.yml
@@ -76,6 +76,8 @@ rpm:
   remove:
   - gnome-tour
   - yelp
+  - firefox
+  - firefox-langpacks
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
   # Whether to embed "yafti" into the OS image and configure it to autostart,
