--- a/recipe.yml
+++ b/recipe.yml
@@ -72,7 +72,7 @@ rpm:
     - gnome-shell-extension-appindicator
     - gnome-shell-extension-blur-my-shell
     - gnome-shell-extension-just-perfection
-    - code
+    
     
   # These RPMs will be removed from the system image. This step happens during
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
@@ -110,3 +110,4 @@ firstboot:
     - com.discordapp.Discord
     - com.mattjakeman.ExtensionManager
     - org.videolan.VLC
+    - com.visualstudio.code
