--- a/recipe.yml
+++ b/recipe.yml
@@ -65,8 +65,6 @@ rpm:
     - gparted
     - distrobox
     - micro
-    - tlp
-    - tlp-rdw
     - zsh
     - fish
     - gnome-shell-extension-appindicator
@@ -86,7 +84,7 @@ firstboot:
   # Whether to embed "yafti" into the OS image and configure it to autostart,
   # which is the preferred uBlue "first boot" GUI. Set this to "false" if you've
   # decided to use a different solution instead.
-  yafti: true
+  yafti: false
   # These Flatpaks will be suggested for install after user login, via the yafti
   # "first boot" GUI. Everything below will be merged into the "yafti.yml" config
   # on build, in a category named "Custom". If you prefer, you can instead remove
@@ -110,4 +108,4 @@ firstboot:
     - com.discordapp.Discord
     - com.mattjakeman.ExtensionManager
     - org.videolan.VLC
-    - com.visualstudio.code
+    #- com.visualstudio.code
